# advent_of_code_23

./: .clang-tidy  .gitignore  CMakeLists.txt  fetch.sh  fetch_challenge.sh  find_missing_days.sh  get_all_inputs.sh  measure_time.sh  measure_total_time.sh
2015/day1/: main_p1  main_p1.cpp  main_p2  makefile
2015/day2/: main_p1  main_p2
2015/day3/: main_p1  main_p2  main_p2.cpp
2015/day4/: main_p1  main_p1.cpp  main_p2  main_p2.cpp
2015/day5/: main_p1  main_p2
2015/day6/: main_p1.cpp
d1/: main_p1.cpp
d12/: main  main_p1.cpp  main_p2.cpp
d2/: main_p1.cpp
d3/: main  main_p1.cpp
d4/: main  main_p1.cpp  main_p2.cpp
d5/: main  main_p2.cpp
d6/: main  main_p1.cpp  main_p2.cpp
helpers/: fetch_challenge.sh  find_missing_days.sh  get_all_inputs.sh  measure_total_time.sh
src/: CMakeLists.txt
src/2015/day1/: main_p1.cpp  main_p2.cpp
src/2015/day2/: main_p1.cpp  main_p2.cpp
src/2015/day3/: main_p1.cpp  main_p2.cpp
src/2015/day4/: main_p1.cpp  main_p2.cpp  makefile
src/2015/day5/: main_p1.cpp  main_p2.cpp
src/2015/day6/: main_p2.cpp
src/2016/day1/: main_p1.cpp  main_p2.cpp
src/2016/day2/: main_p1.cpp  main_p2.cpp
src/2016/day3/: main_p1.cpp  main_p2.cpp
src/2016/day4/: main_p1.cpp  main_p2.cpp
src/2016/day6/: main_p1.cpp  main_p2.cpp
src/2016/day7/: main_p1.cpp  main_p2.cpp
src/2016/day8/: main_p1.cpp
src/2017/day1/: main_p1.cpp  main_p2.cpp
src/2017/day2/: main_p1.cpp  main_p2.cpp
src/2017/day3/: main_p1.cpp  main_p2.cpp
src/2017/day4/: main_p1.cpp  main_p2.cpp
src/2017/day5/: main_p1.cpp  main_p2.cpp
src/2017/day6/: main_p1.cpp  main_p2.cpp
src/2017/day7/: main_p1.cpp  main_p2.cpp
src/2017/day8/: main_p1.cpp  main_p2.cpp
src/2017/day9/: main_p1.cpp  main_p2.cpp
src/2018/day1/: main_p1.cpp  main_p2.cpp
src/2018/day2/: main_p1.cpp  main_p2.cpp
src/2018/day3/: main_p1.cpp  main_p2.cpp
src/2019/day1/: main_p1.cpp  main_p2.cpp
src/2019/day2/: main_p1.cpp  main_p2.cpp
src/2019/day3/: main_p1.cpp  main_p2.cpp
src/2019/day4/: main_p1.cpp  main_p2.cpp
src/2020/day1/: main_p1.cpp  main_p2.cpp
src/2021/day1/: main_p1.cpp  main_p2.cpp
src/2021/day2/: main_p1.cpp  main_p2.cpp
src/2022/day1/: main_p1.cpp  main_p2.cpp
src/2022/day2/: main_p1.cpp  main_p2.cpp
src/2022/day3/: main_p1.cpp  main_p2.cpp
src/2022/day4/: main_p1.cpp  main_p2.cpp
src/2022/day5/: main_p1.cpp  main_p2.cpp
src/2022/day6/: main_p1.cpp  main_p2.cpp
src/2023/day1/: main_p1.cpp  main_p2.cpp
src/2023/day10/: main_p1.cpp  main_p2.cpp
src/2023/day11/: main_p1.cpp  main_p2.cpp
src/2023/day12/: main_p1.cpp  main_p2.cpp
src/2023/day13/: main_p1.cpp  main_p2.cpp
src/2023/day14/: main_p1.cpp  main_p2.cpp
src/2023/day15/: main_p1.cpp  main_p2.cpp
src/2023/day16/: main_p1.cpp  main_p2.cpp
src/2023/day2/: main_p1.cpp  main_p2.cpp
src/2023/day3/: main_p1.cpp  main_p2.cpp
src/2023/day4/: main_p1.cpp  main_p2.cpp
src/2023/day5/: main_p1.cpp  main_p2.cpp
src/2023/day6/: main_p1.cpp  main_p2.cpp
src/2023/day7/: main_p1.cpp  main_p2.cpp
src/2023/day8/: main_p1.cpp  main_p2.cpp
src/2023/day9/: main_p1.cpp  main_p2.cpp
src/2024/day1/: main_p1.cpp  main_p2.cpp
src/2024/day2/: main_p1.cpp  main_p2.cpp
(+133 files in other folders)
